# peas

./: .gitignore  Cargo.toml  README.md  pyproject.toml  wasm2wat.sh
.devcontainer/: Dockerfile  devcontainer.json
data/ablation/: data.csv  generations.csv
data/ablation_sum4/: generations.csv
data/partial_tests/: data.csv  generations.csv
data/partial_tests_sum3/: data.csv  generations.csv
data/partial_tests_sum4/: generations.csv
data/speciation_control/: data.csv
data/speciation_range/: data.csv
examples/: component.rs  polynom.rs  sum3.rs  sum4.rs  walrus.rs  wasmtime.rs
scripts/: display_generations_data.py  experiment_report.py  histogram.py  plot_fitness.py  plot_solvegens.py  run_multiple.sh  single_trial.py  threshold_range.py
src/: experiments.rs  genetic.rs  genome.rs  lib.rs  main.rs  mutations.rs  params.rs  problems.rs  selection.rs
src/experiments/: ablation.rs  partial_tests.rs  speciation.rs
src/problems/: polynom.rs  sum3.rs  sum4.rs
src/wasm/: evolve.rs  genome.rs  graph.rs  ir.rs  mutations.rs  species.rs
tests/: genome.rs
