[package]
name = "peas"
version = "0.0.2"
edition = "2021"

[dependencies]
bon = "2.3"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["from", "into"] }
eyre = "0.6.12"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
# walrus = { version = "0.20.3", features = ["parallel"] }
wasm-encoder = { version = "0.219.1", features = ["wasmparser"] }
wasmparser = "0.219.1"
wasmtime = "26.0.1"
