[package]
name = "peas"
version = "0.0.3"
edition = "2021"

[dependencies]
bon = "3.3.2"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["display", "from", "into"] }
eyre = "0.6.12"
log = "0.4.25"
polars = { version = "0.46.0", features = ["csv"] }
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rand_pcg = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.138"
slab = { version = "0.4.9", features = ["serde"] }
toml = "0.8.19"
# walrus = { version = "0.20.3", features = ["parallel"] }
wasm-encoder = { version = "0.224.0", features = ["wasmparser"] }
wasmparser = "0.224.0"
wasmtime = "29.0.1"
